# phrosty

./: .clang-format  .gitignore  CMakeLists.txt  README.md  version.sh
.github/workflows/: deploy.yml
cmake/: PrepareSharedDeps.cmake
desktop/: Phrosty_ICON8_LINK.html  phrosty.desktop
src/core/: CMakeLists.txt  logger.cpp  logger.h  notify.cpp  notify.h  pch.h  state.cpp  state.h  timer.h
src/renderer/: CMakeLists.txt  glx_common.h  glx_custom.h  item.h  loader_glx.cpp  pch.h  renderer.cpp  renderer.h  x11trace_pass.cpp  x11trace_pass.h  x11trace_texture.cpp  x11trace_texture.h
src/ui/: CMakeLists.txt  action_bar.cpp  action_bar.h  app.cpp  cli.cpp  cli.h  font.cpp  font.h  monitor.cpp  monitor.h  pch.h  slider.cpp  slider.h  store.cpp  store.h  window.cpp  window.h  xutils.cpp  xutils.h
